--- a/public/tripsPage.css
+++ b/public/tripsPage.css
@@ -15,8 +15,8 @@ body {
 h1, h2 {
     text-align: center;
 }
-p {
+table {
     text-align: center;
-    font-size: 18px;
+    font-size: 16px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
