--- a/public/sign-up.css
+++ b/public/sign-up.css
@@ -12,9 +12,29 @@ body {
 #registration {
     text-align: center;
     font-size: 18px;
+    display: grid;
 }
 #error {
     text-align: center;
     font-size: 18px;
     color: red;
 }
+#username {
+    width: 20%;
+    margin-left: 40%;
+}
+#password {
+    width: 20%;
+    margin-left: 40%;
+}
+button {
+    width: 20%;
+    margin-left: 40%;
+    height: 30px;
+    background-color: green;
+    color: white;
+    border-color: none
+    ;
+}
+
+
