--- a/public/trips.css
+++ b/public/trips.css
@@ -15,8 +15,30 @@ body {
 h1, h2 {
     text-align: center;
 }
-table {
+#table {
     text-align: center;
     font-size: 16px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: aliceblue;
+    border: 3px solid brown;
+}
+table, th, td{
+    text-align: center;
+    align-self: center;
+    background-color: indianred;
+    border: 2px solid brown;
+    border-collapse: collapse;
+    padding-top: 10px;
+    padding-bottom: 20px;
+    padding-left: 30px;
+    padding-right: 40px;
+}
+#container {
+    align-content: center;
+}
+.buttons {
+    background-color: wheat;
+    border: 2px solid brown;
+    font-weight: bold;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
