--- a/public/log-in.css
+++ b/public/log-in.css
@@ -14,6 +14,11 @@ body {
     font-size: 18px;
     display: grid;
 }
+#error_p {
+    text-align: center;
+    font-size: 18px;
+    color: red;
+}
 #username {
     width: 20%;
     margin-left: 40%;
